--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -54,6 +54,7 @@ trees = "0.2.1"
 [dependencies.rocksdb]
 # Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
 # when also using the bzip2 crate
+path = "../../rust-rocksdb"
 version = "0.15.0"
 default-features = false
 features = ["lz4"]
