--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 
 [dependencies]
 bincode = "1.3.1"
+blake3 = "0.3.6"
 byteorder = "1.3.4"
 chrono = { version = "0.4.11", features = ["serde"] }
 crossbeam-channel = "0.4"
